--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -711,6 +711,7 @@ img {
 .contact-form select,
 .contact-form textarea,
 .submitReviewTab textarea,
+.submitReviewTab input,
 .review-login input,
 .modal-form input,
 .modal-form textarea,
@@ -1576,6 +1577,13 @@ img {
 }
 .blab-info p {
   font-size: 13px;
+  position: relative;
+}
+.blab-info p .year-of-occurence {
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+  color: #ff6634;
 }
 .blab-icons {
   position: relative;
@@ -2445,6 +2453,9 @@ input[type="file"] {
   color: #ff6634;
   text-align: right;
 }
+.profile-form .delete {
+  cursor: pointer;
+}
 .table-striped > tbody > tr:nth-of-type(odd) {
   --bs-table-accent-bg: #fbfbfb !important;
 }
@@ -2455,11 +2466,15 @@ input[type="file"] {
   font-size: 12px;
 }
 .blab-verification ul {
-  margin: 30px 0;
+  margin: 10px 0 30px;
 }
 .blab-verification ul li {
   border-top: 1px solid #ebebeb;
   padding: 10px;
+}
+.select-all {
+  padding: 30px 10px 10px;
+  color: #000000;
 }
 /* ########## Profile Screen End ########## */
 
@@ -3351,6 +3366,9 @@ footer p {
   margin: 0;
   padding-left: 50px;
   font-family: "Montserrat-SemiBold";
+}
+.blab-verification .select-all.checkbox {
+  padding-left: 20px;
 }
 .review-tag .checkbox,
 .payment-option .checkbox {
